packages/elvis/src/components/form/search.scss
@use '../../variables/colors';
@use '../../utilities/icons';
@use '../../utilities/helpers';

.e-search {
  position: relative;

  &::-ms-clear {
    display: none;
  }

  font-family: 'Red Hat Text', Verdana, sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: helpers.toRem(16);
  line-height: 22px;
  color: colors.color('font-color');

  &--instant {
    .e-input {
      input,
      input:invalid,
      input:disabled {
        padding: 12px 48px 12px 56px;
      }
      input:focus {
        padding: 11px 47px 11px 55px;
      }
    }

    i[class*='e-icon--search-color'] {
      visibility: visible;
      position: absolute;
      display: flex;
      top: 12px;
      left: 16px;
      height: 24px;
      width: 24px;
    }

    &.e-search--searched {
      .e-btn.e-btn--icon {
        visibility: visible;
        .e-btn__icon {
          i[class*='e-icon--close-bold'] {
            visibility: visible;
          }
        }
      }
    }

    .e-btn.e-btn--icon {
      visibility: hidden;
      position: absolute;
      top: 8px;
      right: 12px;
      width: 32px;
      height: 32px;
      .e-btn__icon {
        @include icons.icon-size('xs');
        i[class*='e-icon--close-bold'] {
          visibility: hidden;
          position: absolute;
          display: flex;
        }
      }
    }
  }
  &--on-submit {
    .e-input {
      input,
      input:invalid,
      input:disabled {
        padding: 12px 48px 12px 12px;
      }
      input:focus {
        padding: 11px 47px 11px 11px;
      }
    }

    &.e-search--searched {
      .e-btn.e-btn--icon {
        visibility: visible;
        .e-btn__icon {
          i[class*='e-icon--close-bold'] {
            visibility: visible;
          }
        }
      }
    }

    .e-btn.e-btn--icon {
      visibility: hidden;
      position: absolute;
      top: 8px;
      right: 12px;
      width: 32px;
      height: 32px;
      .e-btn__icon {
        @include icons.icon-size('xs');
        i[class*='e-icon--close-bold'] {
          visibility: hidden;
          position: absolute;
          display: flex;
        }
      }
    }
  }
}

.e-form-field {
  &.e-form-field--compact {
    .e-search--instant {
      font-size: helpers.toRem(14);
      margin-top: -8px;
      .e-input {
        input,
        input:invalid,
        input:disabled {
          max-height: 34px;
          padding: 6px 32px 6px 32px;
        }
        input:focus {
          padding: 5px 31px 5px 31px;
        }
      }
      i[class*='e-icon--search-color'] {
        visibility: visible;
        position: absolute;
        display: flex;
        top: 10px;
        left: 8px;
        height: 16px;
        width: 16px;
      }
      .e-btn {
        top: 1px;
        right: 4px;
      }
    }
    .e-search--on-submit {
      font-size: helpers.toRem(14);
      margin-top: -8px;
      .e-input {
        input,
        input:invalid,
        input:disabled {
          max-height: 34px;
          padding: 6px 32px 6px 10px;
        }
        input:focus {
          padding: 5px 31px 5px 9px;
        }
      }
      .e-btn {
        top: 1px;
        right: 4px;
      }
    }
  }
}

